--- a/cell01/ex1.4/basics.html
+++ b/cell01/ex1.4/basics.html
@@ -40,7 +40,7 @@
         </div>
         <div>
             <img src="https://th.bing.com/th/id/OIP.zMaBLotHo1zp5VwAi4fFkAHaFM?w=293&h=205&c=7&r=0&o=5&pid=1.7" alt="Shop 2">
-            <p><a href="https://www.adidas.co.th/th" target="_blank">Visit Nike</a></p>
+            <p><a href="https://www.nike.com/th/" target="_blank">Visit Nike</a></p>
         </div>
     </div>
     <hr>
