--- a/cell03/ex04/ex02bis/index.html
+++ b/cell03/ex04/ex02bis/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <div class="calculator">
-        <input type="number" id="num1" placeholder="Enter first number" min="0">
+        <input type="text" id="num1" placeholder="Enter first number" min="0">
         <select id="operator">
             <option value="+">+</option>
             <option value="-">-</option>
@@ -19,7 +19,7 @@
             <option value="/">/</option>
             <option value="%">%</option>
         </select>
-        <input type="number" id="num2" placeholder="Enter second number" min="0">
+        <input type="text" id="num2" placeholder="Enter second number" min="0">
         <button id="calculate">Try me!</button>
     </div>
 
